# agentic

./: .gitignore  Makefile  Makefile.backup  PROJECT_RULES.md  README.md  adcp_demo.db-shm  adcp_demo.db-wal  cookies.txt  env.example  pyproject.toml
app/: config.py  config.py.backup  db.py  deps.py  main.py  main.py.backup
app/ai/: errors.py  gemini.py  provider.py
app/models/: __init__.py  agent_settings.py  external_agent.py  product.py  tenant.py
app/repositories/: __init__.py  agent_settings.py  products.py  (+2 more)
docs/: agents.md  api.md  architecture.md  csv_template.md  demo_playbook.md  deploy.md  setup.md  troubleshooting.md
reference/: README.md
scripts/: migrate_to_file_db.md
tests/: conftest.py  test_agent_page_endpoint_display.py  test_agent_settings_ui.py  test_ai_provider_errors.py  test_bulk_delete.py  test_bulk_upload.py  test_buyer_flow.py  test_buyer_partial_fail.py  test_buyer_validation.py  test_circuit_breaker.py  test_csv_edge_cases.py  test_csv_template.py  test_end_to_end_smoke.py  test_environment.py  test_health.py  test_logging_request_id.py  test_mcp_endpoint.py  test_mcp_errors.py  test_mcp_validation_strict.py  test_meta_toggle.py  test_models.py  test_orchestrator_external.py  test_orchestrator_internal.py  test_orchestrator_loopback.py  test_orchestrator_retry_and_timeout.py  test_orchestrator_validation.py  test_persistence_standalone.py  test_preflight.py  test_products_crud.py  test_products_list_search_sort.py  test_prompt_precedence.py  test_prompt_selection.py  test_rank_products_contract.py  test_repositories.py  test_static_assets.py  test_tenant_switch.py  test_tenants_ui.py
(+41 files in other folders)
